--- a/assignment/css/stylesheet.css
+++ b/assignment/css/stylesheet.css
@@ -31,3 +31,60 @@ main{
     grid-auto-rows: 100px;
     grid-auto-rows: 100px;
 }
+.box1{
+    grid-area: box1;
+    align-content: center;
+}
+
+.box2{
+    grid-area: box2;
+    text-align:left;
+   
+}
+    li{
+       position: relative;
+       padding-left: 24px;
+       font-size: 16px;
+ }
+       li:before{
+           content: "";
+           position: absolute;
+           top:4px;
+           height: 8px;
+           width: 8px;
+           left: 12px;
+           background: black;
+       }
+.box3{
+    grid-area: box3;
+    text-align: center;
+    
+}
+
+.box4{
+    grid-area: box4;
+    color: black;
+    display: flexbox;
+    align-items: center;
+    
+}
+#outer{
+    position: center;
+    top: 0;
+    left: 0;
+    width: 85%;
+    height: 85%;
+}
+#inner{
+    width: 85%;
+    height: 85%;
+    top: 20%;
+    right: 0;
+    margin: 0 auto;
+    position: relative;
+    background: whitesmoke;
+    justify-self: stretch;
+    text-align:left;
+    border-radius: 12px;
+   
+}
